--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "soundcloud",
   "private": true,
   "dependencies": {
+    "@hotwired/stimulus": "^3.2.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/actiontext": "^6.1.7-7",
     "@rails/activestorage": "^6.0.0",
@@ -9,6 +10,7 @@
     "@rails/webpacker": "5.4.4",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
+    "wavesurfer.js": "^7.7.15",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
